--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "proxy"
 main = "src/index.ts"
 compatibility_date = "2022-05-15"
+minify = true
 
 [vars]
 BASE_URL = "http://localhost:8787/"
